@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-RewriteVersion-Transitional
 
 {{$NEXT}}
+          - work around (hopefully temporary) breakage with the addition of
+            extra comments after $VERSION declarations by [RewriteVersion]
 
 0.006     2015-06-28 06:05:57Z
           - add documentation amendment about the handling of multiple
